force-app/main/default/objects/Work_Item_Dependency__c/Work_Item_Dependency__c.object-meta.xml
<CustomObject>
    <description>A junction object between Work Items</description>
    <label>Work Item Dependency</label>
    <nameField>
        <displayFormat>WID-{0000}</displayFormat>
        <label>Work_Item_Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>