force-app/main/default/objects/Work_Item_Dependency__c/fields/Blocked_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Work_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The work item currently being blocked</description>
    <label>Blocked Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Blocking Work Items</relationshipLabel>
    <relationshipName>Work_Item_Dependencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>