force-app/main/default/objects/Work_Item_Dependency__c/fields/Blocker_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Work_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The work item that is currently blocking</description>
    <label>Blocker Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Dependent Work Items</relationshipLabel>
    <relationshipName>Work_Item_Dependencies1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>