force-app/main/default/objects/Work_Item_Dependency__c/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <description>The type of the dependency</description>
    <label>Dependency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>