force-app/main/default/objects/Work_Item_Dependency__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Work Item Dependency</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>