force-app/main/default/objects/Work_Item_Dependency__c/validationRules/Blocker_WI_not_equal_to_Blocked_WI.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocker_WI_not_equal_to_Blocked_WI</fullName>
    <active>true</active>
    <description>Prevent the same Work Item from being both the blocker and blocked Work Item</description>
    <errorConditionFormula>Blocked_Work_Item__c = Blocker_Work_Item__c</errorConditionFormula>
    <errorMessage>Blocker Work Item cannot be the same as the Blocked Work Item</errorMessage>
</ValidationRule>