force-app/main/default/objects/Work_Item_Dependency__c/validationRules/Check_Blocker_and_Blocked_WI_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Blocker_and_Blocked_WI_Selected</fullName>
    <active>true</active>
    <description>Ensure that both a Blocker and Blocked work item are selected</description>
    <errorConditionFormula>OR(
    ISBLANK(Blocked_Work_Item__c),
    ISBLANK(Blocker_Work_Item__c)
)</errorConditionFormula>
    <errorMessage>Please select a Blocker Work Item and a Blocked Work Item</errorMessage>
</ValidationRule>